fix/navbar-logo-alignment issue6522

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -7,8 +7,13 @@
 }
 
 .navbar-logo {
-  height: 70px;
-  padding-top: 5px;
+  height: 45px;
+}
+
+.navbar-brand {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .fa-search {
@@ -661,8 +666,8 @@
 
 @media (max-width: 400px) {
  .navbar-logo {
-    height: 60px;
-    padding-top: 10px;
+    height: 40px;
+    padding-inline: 0.5rem;
   }
 }
 
